# yew-web-component-test

./: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss  package.json  rollup.config.js
.github/workflows/: pr_check.yml
src/: app.rs
