[package]
name = "yew-web-component-test"
version = "0.1.0"
edition = "2021"
description = "Test for running Lit and Material Web Components from Yew"
readme = "README.md"
repository = "https://github.com/Shearerbeard/yew-web-component-test"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
